[FIX]: set horizontal scroll bar to have the same width than the vertical one

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,8 +4,10 @@
   box-sizing: border-box;
 }
 
-*::-webkit-scrollbar {
+*::-webkit-scrollbar,
+*::-webkit-scrollbar:horizontal {
   width: 8px;
+  height: 8px;
 }
 
 *::-webkit-scrollbar-thumb:hover {
